# keyin_and_plot

./: .gitignore  GEMINI.md  README.md  api.py  app.py  changelog.rst  config.py  import_measurements.py  index.html  launch.sh  models.py  pyproject.toml  requirements.txt  style.css
context_collection/: ADVANCED_SEARCH_SPEC.md  CHART_ENGINE_SPEC.md  CHART_EXPORT_SPEC.md  COMPARISON_PLOT_SPEC.md  CSV_IMPORT_REFACTOR_SPEC.md  CSV_IMPORT_SPEC.md  DATABASE_BACKUP_SPEC.md  DATASET_CREATION_SPEC.md  GUTTER_RESIZE_SPEC.md  MEASUREMENT_CREATION_SPEC.md  PROJECT_CONTEXT.md  TABLE_SYSTEM_SPEC.md
docs/specs/: feature-chart-engine.md  feature-measurement.md  feature-search.md  tooling-backup.md  tooling-csv-import.md  ui-layout.md
static/: script.js  style.css
static/js/: admin.js  api.js  chart.js  chart_service.js  floating_window.js  main.js  query_parser.js  state.js  ui.js
static/js/ui/: column_reorderer.js  dataset_ui.js  drag_utils.js  layout.js  legend_ui.js  measurement_ui.js  notification_ui.js  table_resizer.js  workspace_ui.js
templates/: admin.html  index.html  login.html
tools/: README.md  backup_service.py  init_env.py  offsite_sync.py  restore_db.py
