[project]
name = "keyin-and-plot"
version = "0.1.0"
description = "A web application to plot user-keyed (x, y) data points across multiple datasets." 
requires-python = ">=3.11"
readme = "README.md"

# Defines the direct dependencies required by the project.
# uv will use these to determine the full set of packages to install.
dependencies = [
    "flask",
    "Flask-SQLAlchemy",
    "SQLAlchemy",
    "scikit-learn",
    "numpy",
]

[tool.pylsp.plugins.jedi]
environment = ".venv"  # Path to your venv folder

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pylint>=4.0.5",
    "ruff>=0.15.10",
]

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
